--- a/Netflix EDA/Netflix.ipynb
+++ b/Netflix EDA/Netflix.ipynb
@@ -13,12 +13,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df=pd.read_csv(r\"C:\\Users\\Aishani\\Downloads\\NetFlix.csv\")\n"
+    "df=pd.read_csv(r\"C:\\Users\\Aishani\\OneDrive\\Documents\\GitHub\\Data-Science\\Netflix EDA\\NetFlix.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "id": "07c88b4d-fabf-405c-8711-b2ac3c781f4a",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7787, 12)\n",
+      "Number of Rows in 7787\n",
+      "Number of Columns in 12\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 7787 entries, 0 to 7786\n",
       "Data columns (total 12 columns):\n",
@@ -50,7 +51,8 @@
     }
    ],
    "source": [
-    "print(df.shape)\n",
+    "print(f'Number of Rows in {df.shape[0]}')\n",
+    "print(f'Number of Columns in {df.shape[1]}')\n",
     "df.info()\n"
    ]
   },
@@ -391,33 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "f5b861c6-f2ec-438f-ac8e-7425ab13fefe",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['show_id', 'type', 'title', 'director', 'cast', 'country', 'date_added',\n",
-       "       'release_year', 'rating', 'duration', 'genres', 'description'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "fda53616-9370-4d7f-ac9b-68fee3854e98",
+   "execution_count": 209,
+   "id": "180636b8-8901-495e-92bd-2105fe637546",
    "metadata": {},
    "outputs": [
     {
@@ -435,10 +412,11 @@
        "duration           0\n",
        "genres             0\n",
        "description        0\n",
+       "False           7787\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,8 +427,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 251,
+   "id": "b86e22ac-b819-4a16-9f4d-6bdbb5ab3ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type\n",
+      "Movie       163\n",
+      "TV Show    2226\n",
+      "Name: director, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0                   UNKNOWN\n",
+       "1              Vikram Bhatt\n",
+       "2            Iman Brotoseno\n",
+       "3              Lev L. Spiro\n",
+       "4                   UNKNOWN\n",
+       "               ...         \n",
+       "7782                UNKNOWN\n",
+       "7783                UNKNOWN\n",
+       "7784    Abdellatif Kechiche\n",
+       "7785            Woody Allen\n",
+       "7786           Alex Lehmann\n",
+       "Name: director, Length: 7787, dtype: object"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# director has the most missing values \n",
+    "print(df['director'].isna().groupby(df['type']).sum())\n",
+    "#missing values of director in tv shows more than movies\n",
+    "df['director'].fillna(\"UNKNOWN\")\n",
+    "#filling missing value with unknown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "0c5282c1-cf05-480d-a60f-d12519d1a73b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['title'.duplicated().sum()\n",
+    "#no duplicated titles"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "180636b8-8901-495e-92bd-2105fe637546",
+   "id": "9a31ce20-59a3-4a0f-940b-ac55539e8e47",
    "metadata": {},
    "outputs": [],
    "source": []
